cambios en wardrobe-container

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 }
 
 .wardrobe-container {
+  height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
   justify-content: center;
