--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Press Start 2P", cursive;
-  background: url(/img/printbg.jpg);
+  background: url(/img/print-bg.jpg);
   height: 100vh;  
 }
 
@@ -91,4 +91,33 @@ button {
 button:active {
   border-color: #808080 #fff #fff #808080;
   box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #fff;
+}
+
+@media (min-width: 768px) {
+
+  body {
+    background-size: cover;
+    height: 100vh;  
+  }
+  .bar {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    font-size: 15px;
+  }
+  svg{
+    width: 20;
+  }
+.outfit-preview img {
+  width: 200px;
+  margin: 0.25rem 0;
+  box-shadow: inset -2px -2px 0 #aaa, inset 2px 2px 0 #eee;
+  background-color: #c0c0c0;
+  padding: 4px;
+}
+button {
+  padding: 1rem 2rem;
+  
+}
 }
