--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Press Start 2P", cursive;
-  background: url(/img/print-bg.jpg);
+  background: url(/img/prueba-bg.jpg);
   height: 100vh;  
 }
 
