--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
   margin: 0;
   font-family: "Press Start 2P", cursive;
-  background: url(/img/prueba-bg.jpg);
-  height: 100vh;  
+  background: url(/img/print-background.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 .bar {
@@ -14,19 +17,21 @@ body {
   color: white;
   font-size: 10px;
   text-transform: uppercase;
+  z-index: 10;
 }
 
 .top-bar {
+  top: 0;
   display: flex;
   align-items: center;
-  padding: 0 10px; 
+  padding: 0 10px;
 }
 
 .bottom-bar {
   bottom: 0;
-   display: flex;
+  display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
 .left-text {
@@ -35,9 +40,9 @@ body {
 }
 
 .center-text {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%); 
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .content-wrapper {
@@ -47,7 +52,7 @@ body {
 }
 
 .wardrobe-container {
-  height: calc(100vh - 60px);
+  height: calc(100vh - 60px); 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -75,7 +80,6 @@ body {
   padding: 4px;
 }
 
-
 button {
   padding: 0.5rem 1rem;
   border: 2px solid #fff;
@@ -85,7 +89,6 @@ button {
   color: black;
   cursor: pointer;
   box-shadow: inset -1px -1px 0 #808080, inset 1px 1px 0 #fff;
-  
 }
 
 button:active {
@@ -93,31 +96,24 @@ button:active {
   box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #fff;
 }
 
-@media (min-width: 768px) {
 
-  body {
-    background-size: cover;
-    height: 100vh;  
-  }
+@media (min-width: 768px) {
   .bar {
-    position: fixed;
-    left: 0;
-    width: 100%;
     height: 60px;
     font-size: 15px;
   }
-  svg{
-    width: 20;
+
+ 
+
+  svg {
+    width: 20px;
   }
-.outfit-preview img {
-  width: 200px;
-  margin: 0.25rem 0;
-  box-shadow: inset -2px -2px 0 #aaa, inset 2px 2px 0 #eee;
-  background-color: #c0c0c0;
-  padding: 4px;
-}
-button {
-  padding: 1rem 2rem;
-  
-}
+
+  .outfit-preview img {
+    width: 200px;
+  }
+
+  button {
+    padding: 1rem 2rem;
+  }
 }
